--- a/HRTools_v2/Resources/Styles/ListView.xaml
+++ b/HRTools_v2/Resources/Styles/ListView.xaml
@@ -29,6 +29,110 @@
         </Setter>
     </Style>
 
+    <Style x:Key="CommentsListView" TargetType="{x:Type ListView}" BasedOn="{StaticResource ListViewOnMouseOverDisabled}">
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <Border Background="Transparent"
+                            x:Name="container">
+
+                       
+                        <Grid
+                        Margin="10 5">
+                            <Grid.RowDefinitions>
+
+                                <!-- submition date -->
+                                <RowDefinition Height="Auto"/>
+
+                                <!-- content -->
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+
+                            <Grid Grid.Row="0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Border Width="30" Height="30"  CornerRadius="50" BorderBrush="DarkSlateGray" 
+                                        Background="{StaticResource Background}"
+                                BorderThickness="1">
+                                    <TextBlock HorizontalAlignment="Center" 
+                                       VerticalAlignment="Center"
+                                       Text="{Binding CreatedBy, Converter={converters:LoginToInitialsConverter}}"
+                                        FontSize="16"/>
+                                </Border>
+
+                                <StackPanel Orientation="Vertical" Grid.Column="1" Margin="10 0 0 0">
+
+                                    <TextBlock 
+                                    Style="{StaticResource MaterialDesignOverlineTextBlock}"
+                                       Foreground="{DynamicResource PrimaryHueMidBrush}"
+                                    Text="{Binding CreatedBy, Converter={converters:LoginToFullNameConverter}}"
+                                        FontWeight="Bold"
+                                        FontSize="14"/>
+
+                                    <TextBlock Grid.Row="0"
+                                    Style="{StaticResource MaterialDesignOverlineTextBlock}"
+                                       Foreground="Gray"
+                                           FontSize="10"
+                                           Text="{Binding CreatedAt, Converter={converters:DateTimeToStringConverter}}"
+                                           />
+
+                                </StackPanel>
+
+                                <materialDesign:PopupBox   Grid.Column="2"
+                                           Margin="5 0" VerticalAlignment="Top">
+
+                                    <materialDesign:PopupBox.ToggleContent >
+                                        <materialDesign:PackIcon Kind="DotsVertical"
+                                                    Margin="10 0"
+                                                 ToolTip="Data options.."
+                                                 Foreground="{DynamicResource PrimaryHueDarkBrush}"/>
+
+                                    </materialDesign:PopupBox.ToggleContent>
+
+
+
+                                    <Button Grid.Column="1"
+                                Margin="0 -8"
+                            Background="Transparent" 
+                    materialDesign:ShadowAssist.ShadowEdges="None"
+                    materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                        BorderBrush="DarkSlateGray"
+                    BorderThickness="1"
+                                            IsEnabled="{Binding CreatedBy, Converter={converters:LoginToIsActionActiveConverter}}"
+                                Command="{Binding SubmitResignationCommand}"
+                    >
+                                        <StackPanel Orientation="Horizontal">
+                                            <materialDesign:PackIcon Kind="TrashOutline" 
+                                                                 VerticalAlignment="Center"
+                                                                 Foreground="DarkSlateGray"/>
+                                            <TextBlock Margin="10 0 0 0" Text="Delete" Foreground="DarkSlateGray"
+                                                   FontSize="12"/>
+                                        </StackPanel>
+                                    </Button>
+
+                                </materialDesign:PopupBox>
+
+                            </Grid>
+
+                            <TextBlock Grid.Row="1"
+                                   Text="{Binding Content}"
+                                       Foreground="Gray"
+                                       Margin="0 10"
+                                       TextWrapping="Wrap" 
+                                       TextTrimming="CharacterEllipsis"/>
+
+                        </Grid>
+
+                    </Border>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style  x:Key="SanctionsListView" TargetType="{x:Type ListView}" BasedOn="{StaticResource ListViewOnMouseOverDisabled}">
         <Setter Property="ItemTemplate">
             <Setter.Value>
