--- a/HRTools_v2/Views/AppSettings.xaml
+++ b/HRTools_v2/Views/AppSettings.xaml
@@ -72,6 +72,7 @@
                     <!-- AWAL -->
                     <Expander Header="AWAL" Background="Transparent"
                               BorderThickness="0 0 0 1"
+                              Margin="0 5"
                               BorderBrush="DarkSlateGray">
                         <Grid>
                             <Grid.RowDefinitions>
