--- a/HRTools_v2/Resources/Styles/ListView.xaml
+++ b/HRTools_v2/Resources/Styles/ListView.xaml
@@ -121,7 +121,7 @@
                             <TextBlock Grid.Row="1"
                                    Text="{Binding Content}"
                                        Foreground="Gray"
-                                       Margin="0 10"
+                                       Margin="10 10 0 10"
                                        TextWrapping="Wrap" 
                                        TextTrimming="CharacterEllipsis"/>
 
