--- a/HRTools_v2/Views/EmployeeData.xaml
+++ b/HRTools_v2/Views/EmployeeData.xaml
@@ -171,7 +171,7 @@
                                                  ToolTip="Clear"
                                                  Foreground="DarkSlateGray"/>
                             </Button>
-
+                            
                             <Button Grid.Column="1"
                                 Margin="5"
                             Background="Transparent" 
@@ -1114,6 +1114,59 @@
                                         FontWeight="Bold"
                                         Foreground="DarkSlateGray"
                                         VerticalAlignment="Center"/>
+
+                        <materialDesign:PopupBox HorizontalAlignment="Right"
+                                     Background="Transparent"
+                                                 StaysOpen="True">
+
+                            <materialDesign:PopupBox.ToggleContent>
+
+
+                                <materialDesign:PackIcon Kind="NoteAddOutline" 
+                                                         ToolTip="Add new comment"
+                                                                 VerticalAlignment="Center"
+                                                                 Foreground="DarkSlateGray"/>
+
+
+                            </materialDesign:PopupBox.ToggleContent>
+
+                            <StackPanel Orientation="Vertical"
+                                        Margin="10">
+                                <TextBox Width="300"
+                                     Height="200"
+                                         Margin="0 5"
+                                         BorderThickness="0"
+                                         AcceptsReturn="True"
+                                         TextWrapping="Wrap"
+                                         materialDesign:HintAssist.Hint="Comment"/>
+
+                                <Separator BorderBrush="LightGray" BorderThickness="1"
+                               Margin="1"/>
+                                
+                                <Button 
+                                Margin="-10 5 -10 -18"
+                            Background="Transparent" 
+                    materialDesign:ShadowAssist.ShadowEdges="None"
+                    materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                        BorderBrush="DarkSlateGray"
+                    BorderThickness="1"
+                                Command="{Binding AddCommentCommand}"
+                                    HorizontalContentAlignment="Center"
+                    >
+                                    <StackPanel Orientation="Horizontal"
+                                                HorizontalAlignment="Center">
+                                        <materialDesign:PackIcon Kind="CreateOutline" 
+                                                                 VerticalAlignment="Center"
+                                                                 Foreground="DarkSlateGray"/>
+                                        <TextBlock Margin="10 0 0 0" Text="Submit" Foreground="DarkSlateGray"
+                                                   FontSize="12"/>
+                                    </StackPanel>
+                                </Button>
+
+                            </StackPanel>
+
+
+                        </materialDesign:PopupBox>
 
                         <ProgressBar Grid.Row="1"
                                 Style="{StaticResource MaterialDesignCircularProgressBar}"
