--- a/HRTools_v2/Views/EmployeeData.xaml
+++ b/HRTools_v2/Views/EmployeeData.xaml
@@ -1133,11 +1133,12 @@
                             <StackPanel Orientation="Vertical"
                                         Margin="10">
                                 <TextBox Width="300"
-                                     Height="200"
+                                        Height="200"
                                          Margin="0 5"
                                          BorderThickness="0"
                                          AcceptsReturn="True"
                                          TextWrapping="Wrap"
+                                         Text="{Binding CommentText, Mode=TwoWay}"
                                          materialDesign:HintAssist.Hint="Comment"/>
 
                                 <Separator BorderBrush="LightGray" BorderThickness="1"
@@ -1175,7 +1176,8 @@
                                              Height="90" 
                                              Visibility="{Binding WidgedState, Converter={converters:HomePageWidgetStateToVisibilityConverter}, ConverterParameter='EmployeeCommentsLoading'}"/>
 
-                        <ListView Grid.Row="1"
+                        <ListView x:Name="commentsListView"
+                            Grid.Row="1"
                                   Margin="0 10"
                                ItemsSource="{Binding Comments}"
                                 Style="{StaticResource CommentsListView}"
