--- a/HRTools_v2/Views/AppSettings.xaml
+++ b/HRTools_v2/Views/AppSettings.xaml
@@ -381,7 +381,7 @@
 
                                     <Border Background="Transparent"
                         Margin="10 0 0 0"
-                        HorizontalAlignment="Center"
+                        HorizontalAlignment="Center" VerticalAlignment="Center"
                         Visibility="{Binding IsAwalDataImportInProgress, Converter={StaticResource BooleanToVisibilityConverter}}">
                                         <Grid Width="140" Height="10">
                                             <Grid.ColumnDefinitions>
@@ -422,14 +422,255 @@
                                     </Border>
 
                                 </Grid>
-                                
-                                
 
                             </StackPanel>
 
                         </Grid>
                     </Expander>
 
+                    <!-- Meetings -->
+                    <Expander Header="Meetings" Background="Transparent"
+                              BorderThickness="0 0 0 1"
+                              Margin="0 5"
+                              BorderBrush="DarkSlateGray">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+
+                            <StackPanel Orientation="Horizontal" Grid.Row="0">
+                                <Button Background="Transparent" 
+                                HorizontalAlignment="Left"
+                    materialDesign:ShadowAssist.ShadowEdges="None"
+                    materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                        BorderThickness="0 0 0 1"
+                                        Command="{Binding OpenMeetingsFileCommand}"
+                    >
+                                    <StackPanel Orientation="Horizontal">
+                                        <materialDesign:PackIcon Kind="FolderOpenOutline" 
+                                                                 VerticalAlignment="Center"
+                                                                 Foreground="DarkSlateGray"/>
+                                        <TextBlock Margin="10 0 0 0" Text="Open File" 
+                                           Foreground="DarkSlateGray"/>
+                                    </StackPanel>
+                                </Button>
+
+                                <TextBlock Text="{Binding MeetingsFileName}"
+                                       VerticalAlignment="Center"
+                                       Margin="10 0 0 0"
+                                       FontSize="10"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="1"
+                                    Orientation="Vertical"
+                                    Margin="10 10 0 0">
+
+                                <TextBlock Text="* Expected column names for each data point. If it fails to identify column name from file - value will be ignored"
+                                       VerticalAlignment="Center"
+                                           FontStyle="Italic"
+                                       Margin="10 5"/>
+
+                                <Grid Margin="0 10">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBox Grid.Column="0"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.ID,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Case ID"
+                                         materialDesign:HintAssist.IsFloating="True"
+                                         materialDesign:HintAssist.HelperText="* Mandatory"
+                                         materialDesign:HintAssist.HelperTextFontSize="8"
+                                         />
+
+                                    <TextBox Grid.Column="1"
+                                         Text="{Binding MeetingsMap.EmployeeID,Mode=TwoWay}"
+                                         Margin="0 0 20 0"
+                                    materialDesign:HintAssist.Hint="Employee ID"
+                                         materialDesign:HintAssist.IsFloating="True"
+                                         materialDesign:HintAssist.HelperText="* Mandatory"
+                                         materialDesign:HintAssist.HelperTextFontSize="8"/>
+
+                                    <TextBox Grid.Column="2"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.UserID,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Login (userID)"
+                                         materialDesign:HintAssist.IsFloating="True"
+                                          materialDesign:HintAssist.HelperText="If left blank - will attempt to fill from roster"
+                                         materialDesign:HintAssist.HelperTextFontSize="8"/>
+
+                                </Grid>
+
+                                <Grid Margin="0 20">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBox Grid.Column="0"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.EmployeeName,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Employee Name"
+                                         materialDesign:HintAssist.IsFloating="True"
+                                          materialDesign:HintAssist.HelperText="If left blank - will attempt to fill from roster"
+                                         materialDesign:HintAssist.HelperTextFontSize="8"
+                                         />
+
+                                    <TextBox Grid.Column="1"
+                                         Text="{Binding MeetingsMap.ManagerName,Mode=TwoWay}"
+                                         Margin="0 0 20 0"
+                                         materialDesign:HintAssist.Hint="Manager Name"
+                                         materialDesign:HintAssist.IsFloating="True"
+                                         materialDesign:HintAssist.HelperText="If left blank - will attempt to fill from roster"
+                                         materialDesign:HintAssist.HelperTextFontSize="8"/>
+
+                                    <TextBox Grid.Column="2"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.ShiftPattern,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Shift Pattern"
+                                         materialDesign:HintAssist.IsFloating="True"
+                                          materialDesign:HintAssist.HelperText="If left blank - will attempt to fill from roster"
+                                         materialDesign:HintAssist.HelperTextFontSize="8"/>
+
+                                </Grid>
+
+                                <Grid Margin="0 20">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBox Grid.Column="0"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.FirstMeetingDate,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="First meeting stage date"
+                                         materialDesign:HintAssist.IsFloating="True" />
+
+                                    <TextBox Grid.Column="1"
+                                         Text="{Binding MeetingsMap.FirstMeetingOutcome,Mode=TwoWay}"
+                                         Margin="0 0 20 0"
+                                         materialDesign:HintAssist.Hint="First meeting outcome"
+                                         materialDesign:HintAssist.IsFloating="True"/>
+
+                                    <TextBox Grid.Column="2"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.SecondMeetingDate,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Second meeting stage date"
+                                         materialDesign:HintAssist.IsFloating="True"/>
+
+                                </Grid>
+
+                                <Grid Margin="0 20">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBox Grid.Column="0"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.SecondMeetingOutcome,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Second meeting outcome"
+                                         materialDesign:HintAssist.IsFloating="True" />
+
+                                    <TextBox Grid.Column="1"
+                                         Text="{Binding MeetingsMap.CreatedBy,Mode=TwoWay}"
+                                         Margin="0 0 20 0"
+                                         materialDesign:HintAssist.Hint="Case created by"
+                                         materialDesign:HintAssist.IsFloating="True"/>
+
+                                    <TextBox Grid.Column="2"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.CreatedAt,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Case created at"
+                                         materialDesign:HintAssist.IsFloating="True"/>
+
+                                </Grid>
+
+                                <Grid Margin="0 20">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBox Grid.Column="0"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.UpdatedBy,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Case last updated by"
+                                         materialDesign:HintAssist.IsFloating="True" />
+
+                                    <TextBox Grid.Column="1"
+                                         Text="{Binding MeetingsMap.UpdatedAt,Mode=TwoWay}"
+                                         Margin="0 0 20 0"
+                                         materialDesign:HintAssist.Hint="Case last updated at"
+                                         materialDesign:HintAssist.IsFloating="True"/>
+
+                                    <TextBox Grid.Column="2"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.Paperless,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Paperless"
+                                         materialDesign:HintAssist.IsFloating="True"/>
+
+                                </Grid>
+
+                                <Grid Margin="0 20">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+
+                                    <TextBox Grid.Column="0"
+                                         Text="{Binding MeetingsMap.MeetingType,Mode=TwoWay}"
+                                         Margin="0 0 20 0"
+                                         materialDesign:HintAssist.Hint="Type of the meeting (Disc/Health)"
+                                         materialDesign:HintAssist.IsFloating="True"/>
+
+                                    <TextBox Grid.Column="1"
+                                         Margin="0 0 20 0"
+                                         Text="{Binding MeetingsMap.MeetingStatus,Mode=TwoWay}"
+                                    materialDesign:HintAssist.Hint="Meeting status"
+                                         materialDesign:HintAssist.IsFloating="True"/>
+
+                                </Grid>
+
+                                <Grid>
+
+                                    <Button Grid.Column="2"
+                                Margin="10"
+                            Background="Transparent" 
+                    materialDesign:ShadowAssist.ShadowEdges="None"
+                    materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                        BorderBrush="DarkSlateGray"
+                    BorderThickness="1"
+                                            Visibility="{Binding IsMeetingsDataImportInProgress, Converter={StaticResource InverseBoolToVisConverter}}"
+                                Command="{Binding ImportMeetingsFileCommand}">
+                                        <StackPanel Orientation="Horizontal">
+                                            <materialDesign:PackIcon Kind="HomeImportOutline" 
+                                                                 VerticalAlignment="Center"
+                                                                 Foreground="DarkSlateGray"/>
+                                            <TextBlock Margin="10 0 0 0" Text="Import" Foreground="DarkSlateGray"
+                                                   FontSize="12"/>
+                                        </StackPanel>
+                                    </Button>
+
+                                    <ProgressBar  Visibility="{Binding IsMeetingsDataImportInProgress, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                                  IsIndeterminate="True"/>
+
+                                </Grid>
+
+
+                            </StackPanel>
+                        </Grid>
+                    </Expander>
                 </StackPanel>
             </Grid>
             
