--- a/HRTools_v2/Views/MainWindow.xaml
+++ b/HRTools_v2/Views/MainWindow.xaml
@@ -63,7 +63,7 @@
                             Style="{StaticResource MaterialDesignFlatButton}"
                                 Height="50"
                             Command="{Binding NavigateCommand}"
-                            CommandParameter="AWAL">
+                            CommandParameter="AwalPage">
                             <StackPanel Orientation="Vertical">
                                 <materialDesign:PackIcon Kind="EmergencyExit"
                                                              HorizontalAlignment="Center"
